# crazy-chess

client/: Cargo.toml
client/src/: main.rs
grpc/client/: Cargo.toml
grpc/client/src/: main.rs
grpc/server/: build.rs
grpc/shared/proto/: chess.proto
grpc/shared/src/: bitboard.rs  board.rs  piece.rs
script/: build-and-run-wasm.sh  build-wasm.sh
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  mov.rs
wasm/: index.html
