[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
tonic = "0.12.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.4"
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.6.0", features = ["client"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-net = "0.6.0"
tonic-web-wasm-client = "0.6.1"

[build-dependencies]
tonic-build = "0.12.3"
